--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,6 @@ body {
   justify-content: center;
   align-items: center;
   padding: 1rem;
-  overflow: hidden;
 }
 
 .login-form {
@@ -45,15 +44,6 @@ body {
   max-width: 400px;
   width: 100%;
   text-align: center;
-  overflow: hidden;
-  display: flex;
-  margin: auto;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  flex-direction: column;
-  gap: 1rem;
 }
 
 .login-form h2 {
@@ -109,7 +99,6 @@ body {
   background-color: white;
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  overflow: hidden;
 }
 
 .chat-room h2 {
@@ -125,7 +114,6 @@ body {
   flex: 1;
   display: flex;
   justify-content: center;
-  overflow: auto;
   padding: 1rem;
 }
 
@@ -135,12 +123,10 @@ body {
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   max-width: 400px;
-  max-height: 100%;
   width: 100%;
   text-align: center;
   display: flex;
   flex-direction: column;
-  overflow: hidden;
 }
 
 .chat-list-content h2 {
@@ -190,7 +176,6 @@ body {
 
 .chat-header {
   position: sticky;
-  top: 70px;
   z-index: 100;
   background-color: var(--primary-color);
   color: white;
@@ -291,10 +276,11 @@ body {
   flex-direction: column;
 }
 
-.message-list {
+.message-list-container {
   flex: 1;
   overflow-y: auto;
-  padding: 10px;
+  display: flex;
+  flex-direction: column;
 }
 
 .message {
@@ -470,22 +456,6 @@ body {
   margin-bottom: 40px;
 }
 
-.welcome-message {
-  text-align: center;
-  margin-top: 2rem;
-}
-
-.welcome-message h2 {
-  font-size: 2rem;
-  margin-bottom: 1rem;
-  color: var(--primary-color);
-}
-
-.welcome-message p {
-  font-size: 1.2rem;
-  color: var(--secondary-color);
-}
-
 .media-container {
   margin-top: 0.5rem;
   border-radius: 8px;
@@ -510,15 +480,6 @@ body {
 
 .message-media:hover {
   transform: scale(1.05);
-}
-
-.quoted-message {
-  background-color: #f0f0f0;
-  padding: 0.5rem;
-  border-radius: 4px;
-  margin-bottom: 0.5rem;
-  font-size: 0.9rem;
-  color: #666;
 }
 
 .no-chats-message {
@@ -588,7 +549,6 @@ body {
   padding: 2px;
   transition: transform 0.2s;
 }
-
 
 .hover-reactions .reaction-option:hover {
   transform: scale(1.2);
@@ -700,14 +660,12 @@ body {
   opacity: 0;
   transition: opacity 0.3s ease;
   vertical-align: middle;
- 
 }
 
 .edit-icon-wrapper {
   position: relative;
   display: inline-block;
   vertical-align: middle;
- 
 }
 
 .message:hover .edit-icon-button {
@@ -801,20 +759,7 @@ body {
   margin-top: 20px;
 }
 
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-    transform: translateY(10px);
-  }
-
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
-
 @media (max-width: 768px) {
-
   .login-form {
     padding: 1rem;
   }
